spacing issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -113,7 +113,7 @@ section#images{
 
 section#footers{
 	margin-top: 200px;
-	padding-top: 190px;
+	padding-top: 185px;
 }
 
 dl.dl-horizontal{
